Creating a Modal Portal and do StreamDelete compoment

--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -9,6 +9,8 @@
 
 @import "components/header";
 @import "components/stream-list";
+@import "components/modal";
+@import "components/form";
 
 @import "pages/homepage";
 
