Implementing Flv.js for streaming

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 // COLOR VARIABLES
-$color-primary: #171544;
+$color-primary: #101d2c;
 
 $color-secondary: #474a51;
 $color-secondary-dark: #2e3035;
