--- a/client/src/sass/components/_stream-list.scss
+++ b/client/src/sass/components/_stream-list.scss
@@ -12,22 +12,10 @@
     &__wrapper {
         position: relative;
         box-shadow: 0 2px 4px 0 rgba(0,0,0,.4);
+        cursor: pointer;
 
-        &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            cursor: pointer;
-            background: $color-white;
-            opacity: 0;
-            transition: opacity .25s;
-        }
-
-        &:hover::after {
-            opacity: .1;
+        &:hover {
+            opacity: .8;
         }
     }
 
@@ -54,6 +42,10 @@
 
     &__meta {
         flex: 1;
+    }
+
+    &__title {
+        display: block;
     }
 
     &__icons {
